@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -128,7 +127,7 @@ public class OpenOfficePanel {
         update.setMaxWidth(Double.MAX_VALUE);
 
         loader = new StyleLoader(ooPrefs,
-                                 Globals.prefs.getLayoutFormatterPreferences(Globals.journalAbbreviationLoader),
+                                 Globals.prefs.getLayoutFormatterPreferences(Globals.journalAbbreviationRepository),
                                  Globals.prefs.getDefaultEncoding());
 
         initPanel();
@@ -272,11 +271,11 @@ public class OpenOfficePanel {
         VBox row1 = new VBox();
         VBox row2 = new VBox();
         VBox row3 = new VBox();
-        row1.getChildren().addAll(setStyleFile,pushEntries, pushEntriesInt);
+        row1.getChildren().addAll(setStyleFile, pushEntries, pushEntriesInt);
         row2.getChildren().addAll(pushEntriesAdvanced, pushEntriesEmpty, merge);
         row3.getChildren().addAll(manageCitations, exportCitations, settingsB);
-        HBox hbox1 =  new HBox();
-        hbox1.getChildren().addAll(row1,row2,row3);
+        HBox hbox1 = new HBox();
+        hbox1.getChildren().addAll(row1, row2, row3);
         hbox1.getChildren().forEach(btn -> HBox.setHgrow(btn, Priority.ALWAYS));
 
         vbox.setFillWidth(true);
@@ -375,7 +374,7 @@ public class OpenOfficePanel {
             @Override
             protected OOBibBase call() throws Exception {
                 updateProgress(ProgressBar.INDETERMINATE_PROGRESS, ProgressBar.INDETERMINATE_PROGRESS);
-                List<URL> jarUrls = findOpenOfficeJars(Paths.get(ooPrefs.getInstallationPath()));
+                List<URL> jarUrls = findOpenOfficeJars(Path.of(ooPrefs.getInstallationPath()));
 
                 return createBibBase(jarUrls);
             }
